syntax = "proto3";

package auth;

import "general.proto";

service Auth {
    rpc SignIn(SignInRequest) returns (AuthResponse) {}
    rpc SignUp(SignUpRequest) returns (AuthResponse) {}
}

message SignInRequest {
    string username = 1;
    string password = 2;
}

message SignUpRequest {
    string full_name = 1;
    string username = 2;
    general.UserRole role = 3;
    string password = 4;
}

message AuthResponse {
    string access_token = 1;
    general.UserEntityPB user = 2;
}
